// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomMap check type props 1`] = `
<div
  id="149583175659"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
/>
`;

exports[`CustomMap should render correctly setting the data 1`] = `
<div
  id="429428167371"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
/>
`;
